adjust http methods, use jsonb, readme

--- a/reviewer/Cargo.toml
+++ b/reviewer/Cargo.toml
@@ -11,7 +11,7 @@ hex = "0.4.0"
 url = "2.1.0"
 untrusted = "0.6.2"
 ring = "0.13.5"
-diesel = { version = "1.0.0", features = ["postgres"] }
+diesel = { version = "1.0.0", features = ["postgres", "serde_json"] }
 xmltree = "0.8.0"
 reqwest = "0.9.12"
 serde = { version = "1.0.90", features = ["derive"] }
