--- a/file_hoster/Cargo.toml
+++ b/file_hoster/Cargo.toml
@@ -3,12 +3,18 @@ name = "file_hoster"
 version = "0.1.0"
 authors = ["keorn <git@i.keorn.org>"]
 edition = "2018"
+default-run = "main"
 
 [dependencies]
 log = "0.4"
+lazy_static = "1.4.0"
 hex = "0.4.0"
 sha2 = "0.8.0"
+rusoto_credential = "0.41.1"
+rusoto_core = "0.41.0"
+rusoto_s3 = "0.41.0"
 rocket = "0.4.2"
 rocket_contrib = { version = "0.4.2", default-features = false, features = ["json"] }
 rocket_cors = "0.5.0"
 rocket-multipart-form-data = "0.7.2"
+rocket_lamb = "0.6.0"
