--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,12 +2,18 @@ variables:
   S3_BUCKET: "mangrove.network"
 
 deploy:
-  image: mesosphere/aws-cli
+  image: python:latest
+
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+    - node_modules/
 
   before_script:
   - npm install
 
   script:
   - npm run build
-  - ./aws.sh s3 rm s3://$S3_BUCKET --recursive
-  - ./aws.sh s3 cp --recursive ./reviewer/client/dist s3://$S3_BUCKET
+  - pip install awscli
+  - aws s3 rm s3://$S3_BUCKET --recursive
+  - aws s3 cp --recursive ./reviewer/client/dist s3://$S3_BUCKET
