--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ deploy:
     - node_modules/
 
   script:
-  - cd reviewer/client
+  - cd client
   - npm install
   - npm run build
   - aws s3 rm s3://$S3_BUCKET --recursive
