--- a/client/.env.development
+++ b/client/.env.development
@@ -1,3 +1,5 @@
 VUE_APP_API_URL=http://localhost:8000
-VUE_APP_FILES_URL=http://localhost:8001
-VUE_APP_UPLOAD_URL=http://localhost:8001
+VUE_APP_FILES_URL=https://files.mangrove.network
+VUE_APP_UPLOAD_URL=https://upload.mangrove.network
+#VUE_APP_FILES_URL=http://localhost:8001
+#VUE_APP_UPLOAD_URL=http://localhost:8001
