swap to new client and update ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,11 +10,11 @@ deploy:
   cache:
     key: ${CI_COMMIT_REF_SLUG}
     paths:
-    - node_modules/
+    - client/node_modules/
 
   script:
   - cd client
-  - npm install
-  - npm run build
+  - yarn install
+  - yarn generate
   - aws s3 rm s3://$S3_BUCKET --recursive
   - aws s3 cp --recursive ./dist s3://$S3_BUCKET
