--- a/client/package.json
+++ b/client/package.json
@@ -1,36 +1,34 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "mangrove-client",
+  "version": "1.0.0",
+  "description": "Mangrove Demo Client",
+  "author": "keorn",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "axios": "^0.18.1",
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/dotenv": "^1.4.0",
     "cbor": "^5.0.1",
-    "core-js": "^2.6.9",
+    "frontmatter-markdown-loader": "^3.1.0",
     "idb-keyval": "^3.2.0",
-    "leaflet": "^1.5.1",
-    "leaflet-control-geocoder": "^1.10.0",
     "leaflet-geosearch": "^2.7.0",
-    "vue": "^2.6.10",
-    "vue-axios": "^2.1.4",
-    "vue-star-rating": "^1.6.1",
-    "vue-upload-component": "^2.8.20",
-    "vue2-leaflet": "^2.2.1",
-    "vue2-leaflet-geosearch": "^1.0.6",
-    "vuex": "^3.1.1"
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
-    "@vue/eslint-config-prettier": "^4.0.1",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.2.3",
-    "vue-template-compiler": "^2.5.21"
+    "@nuxtjs/eslint-config": "^1.0.1",
+    "@nuxtjs/eslint-module": "^1.0.0",
+    "@nuxtjs/vuetify": "^1.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "prettier": "^1.16.4"
   }
 }
