--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,9 @@ file_hoster/files
 client/node_modules
 client/src/node_modules
 client/src/dist
+client/dist
+client/.nuxt
+client/package-lock.json
+client/yarn.lock
 test
 data
