--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "cbor": "^5.0.1",
     "frontmatter-markdown-loader": "^3.1.0",
     "idb-keyval": "^3.2.0",
+    "jdenticon": "^2.2.0",
     "leaflet-geosearch": "^2.7.0",
     "nuxt": "^2.0.0"
   },
