--- a/reviewer/Cargo.toml
+++ b/reviewer/Cargo.toml
@@ -19,10 +19,13 @@ reqwest = "0.9.12"
 serde = { version = "1.0.90", features = ["derive"] }
 serde_cbor = "0.10.1"
 serde_json = "1.0"
+schemars = "0.5.1"
+okapi = "0.2.0"
 dotenv = "0.9.0"
 rocket = "0.4.2"
 rocket_cors = "0.5.0"
 rocket_lamb = "0.6.0"
+rocket_okapi = "0.2.0"
 
 [dependencies.rocket_contrib]
 default-features = false
