--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
-    "cbor": "^5.0.1",
+    "bip32": "^2.0.4",
+    "borc": "^2.1.1",
     "frontmatter-markdown-loader": "^3.1.0",
     "idb-keyval": "^3.2.0",
     "jdenticon": "^2.2.0",
