--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .js,.vue --ignore-path ../.gitignore ."
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
@@ -19,8 +19,9 @@
     "frontmatter-markdown-loader": "^3.1.0",
     "idb-keyval": "^3.2.0",
     "jdenticon": "^2.2.0",
-    "leaflet-geosearch": "^2.7.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "ol": "^6.1.1",
+    "vuelayers": "^0.11.17"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
