--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "base64-url": "^2.3.2",
     "borc": "^2.1.1",
     "cbor": "^5.0.1",
     "frontmatter-markdown-loader": "^3.1.0",
