--- a/reviewer/Cargo.toml
+++ b/reviewer/Cargo.toml
@@ -8,7 +8,8 @@ default-run = "main"
 [dependencies]
 log = "0.4"
 rand = "0.6"
-hex = "0.4.0"
+base64 = "0.11.0"
+base64-url = "1.1.12"
 url = "2.1.0"
 isbn = "0.2.0"
 untrusted = "0.6.2"
