modify env for test

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
-BASE_URL=http://localhost:3000
-VUE_APP_API_URL=http://localhost:8000
+BASE_URL=https://mangrove.network
+VUE_APP_API_URL=https://api.mangrove.network
 VUE_APP_FILES_URL=https://files.mangrove.network
 VUE_APP_UPLOAD_URL=https://upload.mangrove.network
