--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,10 @@
 variables:
   S3_BUCKET: "mangrove.network"
   CI_DEBUG_TRACE: "true"
+  BASE_URL: "https://mangrove.network"
+  VUE_APP_API_URL: "https://api.mangrove.network"
+  VUE_APP_FILES_URL: "https://files.mangrove.network"
+  VUE_APP_UPLOAD_URL: "https://upload.mangrove.network"
 
 deploy:
   only:
