--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "base64-url": "^2.3.2",
     "borc": "^2.1.1",
     "cbor": "^5.0.1",
+    "elliptic": "^6.5.2",
     "frontmatter-markdown-loader": "^3.1.0",
     "idb-keyval": "^3.2.0",
     "jdenticon": "^2.2.0",
