improve gitignore and add initial canonical tests setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,14 @@
-packaged.yaml
-reviewer/.env
-reviewer/target
-file_hoster/target
-file_hoster/files
-client/node_modules
-client/src/node_modules
-client/src/dist
-client/dist
-client/.nuxt
-client/.env
-client/package-lock.json
-client/yarn.lock
+**/packaged.yaml
+**/package-lock.json
+**/yarn.lock
+node_modules/
+dist/
+.nuxt/
+target/
+.ipynb_checkpoints/
 test
+reviewer/.env
+client/.env
+file_hoster/files
 data/scraper
 data/sources
-data/.ipynb_checkpoints
-examples/mangrove-rs/target
