change webapp domain

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 variables:
-  S3_BUCKET: "mangrove.network"
+  S3_BUCKET: "mangrove.reviews"
   CI_DEBUG_TRACE: "true"
-  BASE_URL: "https://mangrove.network"
-  VUE_APP_API_URL: "https://api.mangrove.network"
+  BASE_URL: "https://mangrove.reviews"
+  VUE_APP_API_URL: "https://api.mangrove.reviews"
   VUE_APP_FILES_URL: "https://files.mangrove.reviews"
   VUE_APP_UPLOAD_URL: "https://upload.mangrove.reviews"
 
