--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
     "jdenticon": "^2.2.0",
     "nuxt": "^2.0.0",
     "ol": "^6.1.1",
+    "vue2-perfect-scrollbar": "^1.3.0",
     "vuelayers": "^0.11.17"
   },
   "devDependencies": {
