--- a/ui/package.json
+++ b/ui/package.json
@@ -20,8 +20,8 @@
     "idb-keyval": "^3.2.0",
     "jdenticon": "^2.2.0",
     "nuxt": "^2.0.0",
+    "nuxt-clipboard2": "^0.2.1",
     "ol": "^6.1.1",
-    "vue2-perfect-scrollbar": "^1.3.0",
     "vuelayers": "^0.11.17"
   },
   "devDependencies": {
