--- a/ui/package.json
+++ b/ui/package.json
@@ -19,6 +19,7 @@
     "frontmatter-markdown-loader": "^3.1.0",
     "idb-keyval": "^3.2.0",
     "jdenticon": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "nuxt": "^2.0.0",
     "nuxt-clipboard2": "^0.2.1",
     "ol": "^6.1.1",
