--- a/servers/reviewer/Cargo.toml
+++ b/servers/reviewer/Cargo.toml
@@ -11,8 +11,8 @@ rand = "0.6"
 base64-url = "1.1"
 url = "2.1.0"
 isbn = "0.2.0"
-untrusted = "0.6.2"
-ring = "0.13.5"
+ring = "0.16.9"
+biscuit = "0.4.2"
 diesel = { version = "1.0.0", features = ["postgres", "serde_json"] }
 xmltree = "0.8.0"
 reqwest = "0.9.24"
@@ -23,11 +23,12 @@ csv = "1.1.1"
 schemars = "0.6.1"
 okapi = "0.3.0"
 dotenv = "0.9.0"
-rocket = "0.4.2"
+rocket = { version = "0.4", default-features = false }
 rocket_cors = "0.5.0"
 rocket_lamb = "0.6.0"
 rocket_okapi = "0.3.1"
 
 [dependencies.rocket_contrib]
+version = "0.4.2"
 default-features = false
 features = ["diesel_postgres_pool", "diesel_sqlite_pool", "json"]
