--- a/servers/reviewer/Cargo.toml
+++ b/servers/reviewer/Cargo.toml
@@ -8,30 +8,24 @@ default-run = "main"
 [dependencies]
 log = "0.4"
 rand = "0.6"
-base64-url = "1.1"
-url = "2.1.0"
-isbn = "0.2.0"
-ring = "0.16.9"
-pem = "0.7.0"
-nom = "5.1.0"
-der-parser = "3.0.4"
-biscuit = { git = "https://github.com/plantingspace/biscuit" }
-diesel = { version = "1.0.0", features = ["postgres", "serde_json"] }
-xmltree = "0.8.0"
-reqwest = "0.9.24"
-serde = { version = "1.0.90", features = ["derive"] }
-serde_cbor = "0.10.2"
+url = "2.1"
+isbn = "0.2"
+diesel = { version = "1.0", features = ["postgres", "serde_json"] }
+xmltree = "0.8"
+reqwest = "0.9"
+jsonwebtoken = { git = "https://github.com/plantingspace/jsonwebtoken.git" }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-csv = "1.1.1"
-schemars = "0.6.1"
-okapi = "0.3.0"
-dotenv = "0.9.0"
+csv = "1.1"
+schemars = "0.6"
+okapi = "0.3"
+dotenv = "0.9"
 rocket = { version = "0.4", default-features = false }
-rocket_cors = "0.5.0"
-rocket_lamb = "0.6.0"
-rocket_okapi = "0.3.1"
+rocket_cors = "0.5"
+rocket_lamb = "0.6"
+rocket_okapi = "0.3"
 
 [dependencies.rocket_contrib]
-version = "0.4.2"
+version = "0.4"
 default-features = false
 features = ["diesel_postgres_pool", "diesel_sqlite_pool", "json"]
