--- a/servers/reviewer/Cargo.toml
+++ b/servers/reviewer/Cargo.toml
@@ -6,25 +6,25 @@ edition = "2018"
 default-run = "main"
 
 [dependencies]
-once_cell = "1.3.1"
-log = "0.4"
-rand = "0.6"
-url = "2.1"
-isbn = "0.2"
-diesel = { version = "1.0", features = ["postgres", "serde_json"] }
-xmltree = "0.8"
-reqwest = "0.9"
-jsonwebtoken = { git = "https://github.com/plantingspace/jsonwebtoken.git" }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 csv = "1.1"
-schemars = "0.6"
-okapi = "0.3"
+diesel = { version = "1.0", features = ["postgres", "serde_json"] }
 dotenv = "0.9"
+isbn = "0.2"
+jsonwebtoken = { git = "https://github.com/plantingspace/jsonwebtoken.git" }
+log = "0.4"
+okapi = "0.3"
+once_cell = "1.3.1"
+rand = "0.6"
+reqwest = { version = "0.10", features = ["blocking"] }
 rocket = { version = "0.4", default-features = false }
 rocket_cors = "0.5"
 rocket_lamb = "0.6"
 rocket_okapi = "0.3"
+schemars = "0.6"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+url = "2.1"
+xmltree = "0.8"
 
 [dependencies.rocket_contrib]
 version = "0.4"
