--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "nuxt": "^2.0.0",
     "nuxt-clipboard2": "^0.2.1",
     "ol": "^6.1.1",
+    "ps-trees": "^1.0.2",
     "vuelayers": "^0.11.17"
   },
   "devDependencies": {
