--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "jdenticon": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^2.0.3",
+    "mangrove-js": "file:./../clients/mangrove-js",
     "nuxt": "^2.0.0",
     "nuxt-clipboard2": "^0.2.1",
     "ol": "^6.1.1",
