--- a/libraries/mangrove-reviews-js/package.json
+++ b/libraries/mangrove-reviews-js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mangrove-reviews-js",
+  "name": "mangrove-reviews",
   "version": "0.1.2",
   "description": "JS library for submission and retrieval of Mangrove reviews.",
   "main": "index.js",
