--- a/libraries/mangrove-reviews-js/package.json
+++ b/libraries/mangrove-reviews-js/package.json
@@ -2,6 +2,7 @@
   "name": "mangrove-reviews",
   "version": "0.1.3",
   "description": "JS library for submission and retrieval of Mangrove reviews.",
+  "keywords": ["reviews", "client", "API", "open data", "crypto"],
   "main": "index.js",
   "repository": "https://gitlab.com/plantingspace/mangrove",
   "license": "ISC",
