--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
+    "anchor-js": "^4.2.2",
     "base64-url": "^2.3.3",
     "frontmatter-markdown-loader": "^3.1.0",
     "idb-keyval": "^3.2.0",
