--- a/servers/file_hoster/Cargo.toml
+++ b/servers/file_hoster/Cargo.toml
@@ -7,14 +7,14 @@ default-run = "main"
 
 [dependencies]
 log = "0.4"
-lazy_static = "1.4.0"
-base64-url = "1.1.12"
-sha2 = "0.8.0"
-rusoto_credential = "0.41.1"
-rusoto_core = "0.41.0"
-rusoto_s3 = "0.41.0"
-rocket = "0.4.2"
-rocket_contrib = { version = "0.4.2", default-features = false, features = ["json"] }
-rocket_cors = "0.5.0"
-rocket-multipart-form-data = "0.7.2"
-rocket_lamb = "0.6.0"
+base64-url = "1.1"
+once_cell = "1.3"
+sha2 = "0.8"
+rusoto_credential = "0.41"
+rusoto_core = "0.41"
+rusoto_s3 = "0.41"
+rocket = "0.4"
+rocket_contrib = { version = "0.4", default-features = false, features = ["json"] }
+rocket_cors = "0.5"
+rocket-multipart-form-data = "0.7"
+rocket_lamb = "0.6"
