--- a/servers/reviewer/Cargo.toml
+++ b/servers/reviewer/Cargo.toml
@@ -20,6 +20,7 @@ rocket_cors = "0.5"
 rocket_lamb = "0.6"
 rocket_okapi = "0.3"
 rusoto_core = "0.42"
+rusoto_credential = "0.42"
 rusoto_s3 = "0.42"
 schemars = "0.6"
 serde = { version = "1.0", features = ["derive"] }
