--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "anchor-js": "^4.2.2",
     "base64-url": "^2.3.3",
     "frontmatter-markdown-loader": "^3.1.0",
+    "geolib": "^3.2.1",
     "idb-keyval": "^3.2.0",
     "jdenticon": "^2.2.0",
     "mangrove-reviews": "file:../libraries/mangrove-reviews-js",
