--- a/aggregator/Project.toml
+++ b/aggregator/Project.toml
@@ -5,3 +5,6 @@ version = "0.1.0"
 
 [deps]
 Gen = "ea4f424c-a589-11e8-07c0-fd5c91b9da4a"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
