--- a/aggregator/Project.toml
+++ b/aggregator/Project.toml
@@ -8,3 +8,5 @@ Gen = "ea4f424c-a589-11e8-07c0-fd5c91b9da4a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
