--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,8 @@ build ui:
     - cd ui
     - yarn install
     - yarn generate
-  rules:
-    - changes:
+  only:
+    changes:
       - ui/**/*
 
 build blog:
@@ -26,8 +26,8 @@ build blog:
     - cd blog
     - yarn install
     - yarn build
-  rules:
-    - changes:
+  only:
+    changes:
       - blog/**/*
 
 build api docs:
@@ -36,8 +36,8 @@ build api docs:
     - cd servers/reviewer/docs
     - yarn install
     - yarn doc
-  rules:
-    - changes:
+  only:
+    changes:
       - servers/reviewer/docs/**/*
 
 build js lib docs:
@@ -46,8 +46,8 @@ build js lib docs:
     - cd libraries/mangrove-reviews-js
     - yarn install
     - yarn doc
-  rules:
-    - changes:
+  only:
+    changes:
       - libraries/mangrove-reviews-js/**/*
 
 test js lib:
@@ -56,8 +56,8 @@ test js lib:
     - cd libraries/mangrove-reviews-js
     - yarn install
     - yarn test
-  rules:
-    - changes:
+  only:
+    changes:
       - libraries/mangrove-reviews-js/**/*
 
 pages:
@@ -77,6 +77,9 @@ pages:
       - public
   except:
     - master
+  only:
+    changes:
+      - ui/**/*
 
 deploy api docs:
   stage: deploy
@@ -90,9 +93,10 @@ deploy api docs:
     - aws s3 rm s3://$DOCS_BUCKET --recursive
     - aws s3 cp --recursive ./dist s3://$DOCS_BUCKET
     - aws cloudfront create-invalidation --distribution-id $DOCS_DIST --paths "/*"
-  rules:
-    - if: $CI_COMMIT_BRANCH == "master"
-    - changes:
+  only:
+    refs:
+      - master
+    changes:
       - servers/reviewer/docs/**/*
 
 deploy js lib docs:
@@ -107,9 +111,10 @@ deploy js lib docs:
     - aws s3 rm s3://$JS_BUCKET --recursive
     - aws s3 cp --recursive ./dist s3://$JS_BUCKET
     - aws cloudfront create-invalidation --distribution-id $JS_DIST --paths "/*"
-  rules:
-    - if: $CI_COMMIT_BRANCH == "master"
-    - changes:
+  only:
+    refs:
+      - master
+    changes:
       - libraries/mangrove-reviews-js/**/*
 
 deploy ui:
@@ -128,9 +133,10 @@ deploy ui:
     - aws s3 rm s3://$UI_BUCKET --recursive
     - aws s3 cp --recursive ./dist s3://$UI_BUCKET
     - aws cloudfront create-invalidation --distribution-id $UI_DIST --paths "/*"
-  rules:
-    - if: $CI_COMMIT_BRANCH == "master"
-    - changes:
+  only:
+    refs:
+      - master
+    changes:
       - ui/**/*
 
 deploy blog:
@@ -145,7 +151,8 @@ deploy blog:
     - aws s3 rm s3://$BLOG_BUCKET --recursive
     - aws s3 cp --recursive ./public s3://$BLOG_BUCKET
     - aws cloudfront create-invalidation --distribution-id $BLOG_DIST --paths "/*"
-  rules:
-    - if: $CI_COMMIT_BRANCH == "master"
-    - changes:
+  only:
+    refs:
+      - master
+    changes:
       - blog/**/*
