--- a/aggregator/Project.toml
+++ b/aggregator/Project.toml
@@ -4,9 +4,14 @@ authors = ["keorn <git@i.keorn.org>"]
 version = "0.1.0"
 
 [deps]
+DotEnv = "4dc1fcf4-5e3b-5448-94ab-0c38ec0385c1"
 Gen = "ea4f424c-a589-11e8-07c0-fd5c91b9da4a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
