--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -181,6 +181,7 @@ aggregator:
   image: julia:latest
   script:
     - cd aggregator
+    - julia --project -e 'import Pkg; Pkg.instantiate()'
     - julia --project run.jl
   only:
     - schedules
