--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,8 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "anchor-js": "^4.2.2",
     "base64-url": "^2.3.3",
+    "blueimp-canvas-to-blob": "^3.18.0",
+    "blueimp-load-image": "^2.28.0",
     "frontmatter-markdown-loader": "^3.1.0",
     "geolib": "^3.2.1",
     "idb-keyval": "^3.2.0",
