--- a/servers/reviewer/Cargo.toml
+++ b/servers/reviewer/Cargo.toml
@@ -23,6 +23,7 @@ rusoto_credential = "0.42"
 rusoto_s3 = "0.42"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sophia = "0.5.3"
 url = "2.1"
 xmltree = "0.8"
 
