--- a/servers/reviewer/Cargo.toml
+++ b/servers/reviewer/Cargo.toml
@@ -13,6 +13,7 @@ dotenv = "0.9"
 isbn = "0.2"
 jsonwebtoken = { git = "https://github.com/plantingspace/jsonwebtoken.git" }
 once_cell = "1.3"
+percent-encoding = "2.1"
 rand = "0.6"
 reqwest = { version = "0.10", features = ["blocking"] }
 rocket = { version = "0.4", default-features = false }
