--- a/blog/themes/clover/_config.yml
+++ b/blog/themes/clover/_config.yml
@@ -15,8 +15,8 @@ social:
   Twitter: https://twitter.com/mangroveReviews
 
 # Custom footer
-mail: mangrove@planting.space
-copyright: A PlantingSpace Project — CC-BY-4.0
+mail: hello@open-reviews.net
+copyright: Open Reviews Association — CC-BY-4.0
 
 # Custom menu. You can specific the path or the card style (only useful for category page).
 # Two kinds of card style: 'project-card', 'article-card',
