test: Reproduce one part of #19
@keorn here's one good reason for test driven development: Writing a
test will show you the amount of dependencies that you have to set up. A
lot of dependencies => bad. I say: "Tests will teach you how to
structure and modularize your code."

In this particular example it's the `router-link` component and using
the store in the top menu. Why do we need to stub the store for the
menu? :confused:

--- a/ui/package.json
+++ b/ui/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.0.1",
     "jest": "^26.4.2",
+    "jest-transform-stub": "^2.0.0",
     "prettier": "^1.16.4",
     "vue-jest": "^3.0.7"
   },
@@ -57,7 +58,8 @@
     ],
     "transform": {
       ".*\\.(vue)$": "vue-jest",
-      ".*\\.(js)$": "babel-jest"
+      ".*\\.(js)$": "babel-jest",
+      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "jest-transform-stub"
     },
     "moduleNameMapper": {
       "^~/(.*)$": "<rootDir>/$1"
