fix: De-duplicate or fix meta description+title
@keorn the title in the `head()` method of the page component wasn't
effective as the `title` in the `nuxt.config.js` was overwriting it.

Furthermore, you apparently forgot to add `hid` to the meta tag
`description`. This resulted in duplicate tags, probably not intended.

See here: https://nuxtjs.org/faq/duplicated-meta-tags/

All page components have a unique title and a description. Unless page
components define their own description, they fall back to the one
specified in `nuxt.config.js`.

In order to test page titles and descriptions, you must open your
browser's developer tools at runtime (RightClick>>Inspect>>ElementTab).
Since Mangrove Client does not render the page server-side, the title and
descriptions are not properly set if you check the page's source code (Ctrl+U).
However, implementing server-side-rendering is out of scope of this milestone.

--- a/ui/package.json
+++ b/ui/package.json
@@ -2,7 +2,7 @@
   "name": "mangrove-client",
   "version": "1.0.0",
   "private": false,
-  "description": "Mangrove Demo Client",
+  "description": "Try out writing reviews in the public domain, using a cryptographically generated account that puts you in control of your privacy.",
   "author": "keorn",
   "scripts": {
     "build": "nuxt build",
