--- a/servers/reviewer/Cargo.toml
+++ b/servers/reviewer/Cargo.toml
@@ -31,4 +31,4 @@ xmltree = "0.8"
 [dependencies.rocket_contrib]
 version = "0.4"
 default-features = false
-features = ["diesel_postgres_pool", "diesel_sqlite_pool", "json"]
+features = ["diesel_postgres_pool", "json"]
