--- a/widget/package.json
+++ b/widget/package.json
@@ -1,6 +1,6 @@
 {
   "name": "open-reviews-widget",
-  "version": "0.6.0",
+  "version": "0.6.6",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -25,14 +25,24 @@
   },
   "devDependencies": {
     "@neutrinojs/airbnb": "^9.4.0",
-    "@neutrinojs/jest": "^9.4.0",
+    "@neutrinojs/jest": "^9.5.0",
     "@neutrinojs/library": "^9.5.0",
-    "@neutrinojs/react": "^9.4.0",
+    "@neutrinojs/react": "^9.5.0",
+    "@testing-library/dom": "^7.29.4",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.6.3",
     "dotenv-webpack": "^6.0.0",
     "eslint": "^7",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26",
+    "jsonwebtoken": "^8.5.1",
+    "jwk-to-pem": "^2.0.3",
+    "msw": "^0.26.1",
     "neutrino": "^9.4.0",
+    "node-fetch": "^2.6.1",
+    "node-webcrypto-ossl": "^1.0.48",
+    "react-test-renderer": "^17.0.1",
     "webpack": "^4",
     "webpack-cli": "^3",
     "webpack-dev-server": "^3"
